#2 defaultで作成されたコードは除外対象に設定するようにした

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -12,7 +12,10 @@ parameters:
 #    ignoreErrors:
 #        - '#PHPDoc tag @var#'
 #
-#    excludePaths:
-#        - ./*/*/FileToBeExcluded.php
+    excludePaths:
+        - ./app/Http/Controllers/Auth
+        - ./tests/Feature/Auth
+        - ./app/Http/Requests
+        - ./app/Http/Controllers/ProfileController.php
 #
 #    checkMissingIterableValueType: false
