#42 たぶん動くので本来のものに戻した

--- a/.github/workflows/auto-daploy.yaml
+++ b/.github/workflows/auto-daploy.yaml
@@ -1,9 +1,8 @@
 name: auto-deploy
 on:
-  pull_request:
-    # branches:
-    #   - main
-    # types: [closed]
+  branches:
+    - main
+  types: [closed]
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -26,5 +25,4 @@ jobs:
           scp -r -o "StrictHostKeyChecking=no" -i secret_key ./public/build $USER@$HOST:$ASSETS_BUILD_FILE_PATH
       - name: ssh
         run: |
-          cat ./.github/workflows/deploy.sh
-          chmod +x ./.github/workflows/deploy.sh
+          ssh -oStrictHostKeyChecking=no ${USER}@${HOST} -i secret_key "cd $LARAVEL_DIR && ls -al ./.github/workflows/ && chmod +x ./.github/workflows/deploy.sh && ./.github/workflows/deploy.sh"
