#45 正しい書き方に修正 (#46)

--- a/.github/workflows/auto-daploy.yaml
+++ b/.github/workflows/auto-daploy.yaml
@@ -1,8 +1,9 @@
 name: auto-deploy
 on:
-  branches:
-    - main
-  types: [closed]
+  pull_request:
+    branches:
+      - main
+    types: [closed]
 jobs:
   deploy:
     runs-on: ubuntu-latest
