--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "larastan": [
+            "./vendor/bin/phpstan analyse"
+        ],
+        "php-cs-fixer": [
+            "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix app"
         ]
     },
     "extra": {
