#78 viteのmanifest error が出たので対策

--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -24,5 +24,8 @@ jobs:
       - name: Composer install
         run: composer install
 
+      - name: Setup Laravel
+        run: npm run build
+
       - name: Run Test
         run: php artisan test
